chore: re-work for Java 8 (Android compatibility)